Kubernetes/platforms-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platforms-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: platformservice
  template:
    metadata:
      labels:
        app: platformservice
    spec:
      containers:
        - name: platformservice
          image: nanaessandoh/platformservice:latest
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
            requests:
              memory: 256Mi
              cpu: "0.2"
