Kubernetes/platforms-nodeport-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: platforms-nodeport-server
spec:
  type: NodePort
  selector:
    app: platformservice
  ports:
  - name: platformservice
    protocol: TCP
    port: 80
    targetPort: 80
